<resources>
    <string name="app_name">Unscramble</string>

    <string name="instructions">Unscramble the word using all the letters.</string>
    <string name="enter_your_word">Enter your word</string>
    <string name="word_count">%d of %d words</string>
    <string name="score">Score: %d</string>
    <string name="skip">Skip</string>
    <string name="submit">Submit</string>

    <string name="congratulations">Congratulations!</string>
    <string name="you_scored">"You scored: %d"</string>
    <string name="exit">Exit</string>
    <string name="play_again">Play Again</string>
    <string name="try_again">Try again!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>